# pytorchgui

./: .gitignore  MANIFEST.in  README.md  reinstall.bat  setup.cfg
docs/: make.bat
docs/source/: conf.py  index.rst  modules.rst  pytorchgui.Base.rst  pytorchgui.Connection.rst  pytorchgui.Flow.rst  pytorchgui.FlowExecutor.rst  pytorchgui.InfoMsgs.rst  pytorchgui.Node.rst  pytorchgui.NodePort.rst  pytorchgui.NodePortBP.rst  pytorchgui.RC.rst  pytorchgui.Script.rst  pytorchgui.Session.rst  pytorchgui.dtypes.dtypes.rst  pytorchgui.dtypes.rst  pytorchgui.logging.Logger.rst  pytorchgui.logging.LogsManager.rst  pytorchgui.logging.rst  pytorchgui.pkg_info.rst  pytorchgui.rst  pytorchgui.script_variables.Variable.rst  pytorchgui.script_variables.VarsManager.rst  pytorchgui.script_variables.rst  pytorchgui.utils.rst
examples/: README.md
examples/readme/: main.py  nodes.py  readme.py
pytorchgui/: __init__.py
pytorchgui/backend/: Base.py  Flow.py  Node.py  NodePort.py  README.md  Script.py  Session.py
pytorchgui/src/: Design.py  GUIBase.py  README.md  SessionThreadInterface.py  utils.py
pytorchgui/src/conv_gui/: LogWidget.py
pytorchgui/src/core_wrapper/: Node.py  Session.py  __init__.py
pytorchgui/src/flows/: FlowView.py
pytorchgui/src/flows/nodes/: NodeItem.py  NodeItem_Icon.py  PortItem.py
