[metadata]
name = pytorchgui
version = v0.0.1
author = neonsecret
author_email = slava.v.ivannikov@gmail.com
description = Graphical User Interface for Pytorch
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/neonsecret/pytorchgui
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    PySide2
    QtPy
    waiting

# [options.entry_points]
# console_scripts = (None)
